# robopax

./: CMakeLists.txt  README.md
src/: main.cpp
src/common/logger/: ConsoleLogger.cpp  ConsoleLogger.h  Logger.cpp  Logger.h
src/components/: Component.h
src/components/component_manager/: ComponentManager.cpp  ComponentManager.h
src/components/servos/: ServoControllerComponent.h  ServoSim.cpp  ServoSim.h
src/components/servos/models/: Context.h  ServoCmd.h
src/motors/: MotorController.cpp  MotorController.h  MotorSim.cpp  MotorSim.h
src/servos/: ServoController.h  ServoSim.cpp  ServoSim.h
src/servos/models/: ServoCmd.h  ServoData.h
src/state_machine/: Permissive.h  State.cpp  State.h  StateMachine.cpp  StateMachine.h  StateUtils.cpp  StateUtils.h  States.h
src/state_machine/motors/models/: MotorData.cpp  MotorData.h
src/state_machine/motors/motor_idle/: MotorIdle.cpp  MotorIdle.h  MotorIdleData.h
src/state_machine/motors/motor_position_control/: MotorPositionControl.cpp  MotorPositionControl.h
src/state_machine/servos/: AbortState.cpp  AbortState.h
src/state_machine/servos/position_control/: PositionControl.cpp  PositionControl.h
src/state_machine/servos/servo_idle/: ServoIdle.cpp  ServoIdle.h  ServoIdleData.h
src/state_machine/servos/servo_init/: ServoInit.cpp  ServoInit.h
src/state_machine/step_sequencer/: Step.cpp  Step.h  StepSequencer.cpp  StepSequencer.h
